fix(site): Sort coverflow article list correctly

--- a/src/articles/2019-09-23-infractl-works.mdx
+++ b/src/articles/2019-09-23-infractl-works.mdx
@@ -1,5 +1,5 @@
 ---
-title: InfraCTL is GA!
+title: InfraCTL is Generally Available!
 author: Felicitas Pojtinger
 excerpt: A supra-cloud CLI for nodes, layer 2/layer 3 overlay networks and Kubernetes clusters
 imgSrc: "../assets/articles/infractl-works-header.jpg"
