--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -34,7 +34,7 @@ export default ({
 
 export const query = graphql`
   {
-    file(relativePath: { eq: "avatars/avatar.webp" }) {
+    file(relativePath: { eq: "avatars/avatar.jpg" }) {
       childImageSharp {
         fluid(maxWidth: 1000) {
           ...GatsbyImageSharpFluid_noBase64
