fix: Replace dead Monorepo links with new repo URLs

--- a/src/articles/2019-09-14-sane-categories.mdx
+++ b/src/articles/2019-09-14-sane-categories.mdx
@@ -11,7 +11,7 @@ article: true
 
 So I tried to set up a homelab. This has been a thing that I wanted to do for a long time now; I've got some older `VT-d` capable `x86_64` laptops and desktops laying around at home gathering dust. This even includes my trusty and quite powerful former gaming PC which could serve as a useful compute node. In addition to that, my cloud computing costs have skyrocketed over the last few months, rising ~10 € per month up to nearly 40 € last month. As a student, I simply couldn't afford using this system from that point onwards.
 
-So, a homelab needed to be built then. But how - and how did I get it on to the public internet? This is not actually what this post is going to be about, although I'll be sure to write about in the future. This post is going to about _how_ such a homelab or any modern cloud should be deployed in a sane system - such as the [Cluster Platform (CTPF)](https://gitlab.com/clusterplatform/clusterplatform).
+So, a homelab needed to be built then. But how - and how did I get it on to the public internet? This is not actually what this post is going to be about, although I'll be sure to write about in the future. This post is going to about _how_ such a homelab or any modern cloud should be deployed in a sane system - such as the [Cluster Platform (CTPF)](https://clusterplatform.github.io/clusterplatform/packages/provisioner/).
 
 Currently, the CTPF is incredibly complicated to set up; in order to develop for the CTPF or to deploy it, and then create a cloud with it, an actual cloud is necessary beforehand. This makes for an interesting paradox, as the very reason for me to deploy a homelab is to get rid of that cloud, yet the only way for me to work on the software to develop it is to use one. How does one solve this? Categories of course!
 
@@ -38,7 +38,7 @@ Once a host has booted from the boot media, it runs an iPXE script from the next
 
 Another such "simple" category is the registries. These are responsible for keeping track of the SSH keys to deploy to the hosts as specified in the kickstart file or one of the bash scripts and to save the local IP addresses in use by the newly deployed hosts in their respective datacenter, which is specified by using the before-mentioned tagging system. Similarly to the scripts category, as long as these services are reachable from the hosts, can be deployed in whatever service mesh you want and can use either a central manager service mesh or one per datacenter. It is also possible to use an "external registry" such as Hetzner Cloud, which allows for the use of "virtual remote datacenter" that can join the federation. During installation, they can also add a "general authorized SSH key" for the datacenter to `authorized_keys`, which allows for further setup after OS deployment and maintenance.
 
-This further setup is taken care of by the remaining distributors services from above. These can now, using the "general authorized SSH key", deploy either generic bash scripts, the before-mentioned federated layer 3 overlay network ("private network clusters") or as `k3s`-based Kubernetes clusters ("workload clusters"), which's variables and configs in turn can be registered in another registry service. This is similar to [InfraCTL](https://gitlab.com/pojntfx/pojntfx/tree/master/packages/infractl), a CLI that I've been working on which will be the basis for these distributors.
+This further setup is taken care of by the remaining distributors services from above. These can now, using the "general authorized SSH key", deploy either generic bash scripts, the before-mentioned federated layer 3 overlay network ("private network clusters") or as `k3s`-based Kubernetes clusters ("workload clusters"), which's variables and configs in turn can be registered in another registry service. This is similar to [InfraCTL](https://pojntfx.github.io/infractl/), a CLI that I've been working on which will be the basis for these distributors.
 
 Using these categories, I've made a few scenarios possible that were (more or less) impossible to use before:
 
