--- a/src/articles/2019-09-23-infractl-works.mdx
+++ b/src/articles/2019-09-23-infractl-works.mdx
@@ -11,7 +11,7 @@ article: true
 
 After many, many hours spend on nightly development sessions, I am proud to present a first working version of InfraCTL, the supra-cloud node, overlay network and Kubernetes cluster CLI!
 
-> Get [InfraCTl on GitLab](https://gitlab.com/pojntfx/pojntfx/tree/master/packages/infractl)!
+> Get [InfraCTl on GitHub](https://pojntfx.github.io/infractl/)!
 
 Now, what does InfraCTL do exactly?
 
@@ -522,4 +522,4 @@ kubevirt      virt-controller-564dc766f5-jkmh5                 1/1     Running  
 
 And there you go! You can now join more nodes into the PNCs and/or the WLCs with the commands shown above - or just enjoy your Kubernetes cluster!
 
-And in case you find any problems, feel free to add an issue and/or contribute: [InfraCTl is free/libre and open source software on GitLab](https://gitlab.com/pojntfx/pojntfx/tree/master/packages/infractl)!
+And in case you find any problems, feel free to add an issue and/or contribute: [InfraCTl is free/libre and open source software on GitHub](https://pojntfx.github.io/infractl/)!
